--- a/manchester.html
+++ b/manchester.html
@@ -217,5 +217,7 @@ With Haaland leading the attack and City chasing more trophies, this jersey is m
             document.querySelector('script[type="application/ld+json"]').innerHTML = updatedOffer;
         }
     </script>
+	<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3KiDHuE9EI33sbOX",ck:"3KiDHuE9EI33sbOX"})</script>
 </body>
 </html>
