--- a/pirmacruz.html
+++ b/pirmacruz.html
@@ -247,5 +247,7 @@ Don’t miss your chance to own the official 2024-25 Cruz Azul Alternate Jersey 
             document.querySelector('script[type="application/ld+json"]').innerHTML = updatedOffer;
         }
     </script>
+	<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3KiDHuE9EI33sbOX",ck:"3KiDHuE9EI33sbOX"})</script>
 </body>
 </html>
