--- a/winston.html
+++ b/winston.html
@@ -182,5 +182,7 @@
             document.querySelector('script[type="application/ld+json"]').innerHTML = updatedOffer;
         }
     </script>
+	<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3KiDHuE9EI33sbOX",ck:"3KiDHuE9EI33sbOX"})</script>
 </body>
 </html>
