--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="Show your love for your favorite club with this Chivas 24/25 replica jersey, dryCELL technology helps wick away moisture as you get your game on, making this the perfect jersey for playing like the pros">
     <meta property="og:image" content="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_800,h_800/global/706245/01/dt01/fnd/PNA/fmt/png/Chivas-24/25-Home-Replica-Men's-Soccer-Jersey">
     <meta property="og:url" content="https://jersey336.github.io">
+    <link rel="icon" href="/favicon.png" type="image/png" sizes="32x32">
     <meta property="og:type" content="product">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
