--- a/manchester.html
+++ b/manchester.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="This Manchester City 2024/25 Authentic Home Jersey with short sleeves is drawing inspiration from Manchester’s 0161 area code because for us it's a sense of what being Mancunian is all about. You’ll see it written on lampposts, printed on t-shirts, and tattooed on people. That is why you will also find it printed inside the neckline of this authentic jersey and featured in a patterned flat knit rib on the neckline and cuffs">
     <meta property="og:image" content="https://shop.mancity.com/dw/image/v2/BDWJ_PRD/on/demandware.static/-/Sites-master-catalog-MAN/default/dw272688f5/images/large/701230869BV004_pp_01_mcfc.png">
     <meta property="og:url" content="https://jersey336.github.io/manchester.html">
+    <link rel="icon" href="/favicon.png" type="image/png" sizes="32x32">
     <meta property="og:type" content="product">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
