--- a/pirmacruz.html
+++ b/pirmacruz.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="https://aztecasoccer.com/cdn/shop/files/pirma-kids-cruz-azul-2024-25-authentic-third-jersey-red-front.jpg">
     <meta property="og:url" content="https://jersey336.github.io/pirmacruz.html">
     <meta property="og:type" content="product">
+    <link rel="icon" href="/favicon.png" type="image/png" sizes="32x32">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
