--- a/winston.html
+++ b/winston.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="https://fanatics.frgimages.com/cleveland-browns/mens-nike-jameis-winston-brown-cleveland-browns-team-game-jersey_ss5_p-202222977+pv-1+u-x0dmzg5z2tscykce9hti+v-dguvdv414hakoodm7env.jpg">
     <meta property="og:url" content="https://jersey336.github.io/winston.html">
     <meta property="og:type" content="product">
+    <link rel="icon" href="/favicon.png" type="image/png" sizes="32x32">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
