--- a/pirmacruz.html
+++ b/pirmacruz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cruz Azul 2024-25 Men's Alternate Match Jersey by Pirma - Today Only Price | Worldwide Fast Shipping</title>
     <meta name="description" content="The Pirma Kids Cruz Azul 2024/25 Authentic Third Jersey in Red pays tribute to the club’s iconic nickname, La Máquina. Rooted in history, the name originates from a railway that transported cement for Cemento Cruz Azul, the company where the club’s journey began">
-    <meta name="keywords" content="cruz azul jersey​">
+    <meta name="keywords" content="cruz azul jersey, cruz azul 2024-25 jersey, pirma cruz azul men's jersey, authentic cruz azul alternate jersey​">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://jersey336.github.io/pirmacruz.html">
     <meta property="og:title" content="Cruz Azul 2024-25 Men's Alternate Match Jersey by Pirma - Today Only Price | Worldwide Fast Shipping">
