--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentic Chivas 24/25 Replica Home Jersey - Today Only Price | Worldwide Fast Shipping</title>
     <meta name="description" content="Show your love for your favorite club with this Chivas 24/25 replica jersey, dryCELL technology helps wick away moisture as you get your game on, making this the perfect jersey for playing like the pros">
-    <meta name="keywords" content="chivas jersey​">
+    <meta name="keywords" content="chivas jersey​,chivas football jersey​,chivas female jersey​,chivas jersey authentic​">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://jersey336.github.io">
     <meta property="og:title" content="Authentic Chivas 24/25 Replica Home Jersey - Today Only Price | Worldwide Fast Shipping">
